--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background: blue;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #09d3ac;
+.main-nav {
+  margin-right: 50px;
+}
+.main-nav li{
+  display: inline-block;
+  padding: 0 15px;
+}
+.main-nav a {
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.modal {
+  border-radius: 40%;
+  background: red;
+  border: white;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+}
+.main-nav a:hover {
+  text-decoration: underline;
+}
+.modal-btn-red {
+  font-size: 18px;
+  background: red;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 7px;
+  margin-right: 10px;
+}
+.modal-btn-blue {
+  font-size: 18px;
+  background: blue;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 7px;
 }
